Finished the algorithm part of the report

--- a/docs/project.bib
+++ b/docs/project.bib
@@ -141,6 +141,18 @@
 	YEAR =		{2007},
 }
 
+@misc{lodev,
+	title =		{Texture Generation using Random Noise},
+	howpublished = 	{\url{http://lodev.org/cgtutor/randomnoise.html}},
+	note = 		{Accessed: 2016-12-13}
+}
+
+@misc{Owens2014,
+	title = 	{Use Tri-Planar Texture Mapping for Better Terrain},
+	howpublished = 	{\url{https://gamedevelopment.tutsplus.com/articles/use-tri-planar-texture-mapping-for-better-terrain--gamedev-13821}},
+	note = 		{Accessed: 2016-12-13}
+}
+
 @inproceedings{Pineda88,
   author = "Juan Pineda",
   title = "{A Parallel Algorithm for Polygon Rasterization}",
