added a short section about phong shading

--- a/docs/project.tex
+++ b/docs/project.tex
@@ -94,6 +94,10 @@ the X-axis rendering and 75\% of the Z-axis rendering will be used ~\cite{Owens2
 Another advantage to using this method is that we do not have to derive texture coordinates for
 the terrain since the world space coordinates are used for the texture lookup.
 
+\subsection{Phong Shading}
+For lighting we implemented a simple Phong model, similar to the labs in the EDA221 course. A
+single light source is used for light calculations.
+
 \section{Results}
 
 \section{Discussion}
